# BackEnd

./: pyproject.toml
src/: db.sqlite3
src/BackEnd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: settings.py
src/core/backend/admin/: __init__.py  exemplo.py
src/core/backend/models/: __init__.py  categoriaAcervo.py  colecao.py  exemplo.py  itemAcervo.py  localizacao.py  materiaPrima.py  subTipo.py
src/core/backend/serializers/: ItemAcervo.py  categoriaAcervo.py  colecao.py  exemplo.py  localizacao.py
